# VSA

./: CLAUDE.md  CMakeLists.txt  boundary_smoothing.cpp  boundary_smoothing.h  distance.cpp  distance.h  feature_barrier.cpp  feature_barrier.h  main.cpp  maxflow.h  partitioning.cpp  partitioning.h  proxies.cpp  proxies.h  proxy_classification.cpp  proxy_classification.h  proxy_projection.cpp  proxy_projection.h  proxy_validity.cpp  proxy_validity.h  quadric_proxy.cpp  quadric_proxy.h  smooth_bunny_plane_p10_log.csv  smooth_bunny_plane_p10_proxies.json  smooth_bunny_plane_p10_segmentation.coff  smooth_bunny_progressive_plane_p10_insertion_log.csv  smooth_bunny_progressive_plane_p10_log.csv  smooth_bunny_progressive_plane_p10_merge_log.csv  smooth_bunny_progressive_plane_p10_proxies.json  smooth_bunny_progressive_plane_p10_segmentation.coff  smooth_bunny_progressive_plane_p5_insertion_log.csv  smooth_bunny_progressive_plane_p5_log.csv  smooth_bunny_progressive_plane_p5_proxies.json  smooth_bunny_progressive_plane_p5_segmentation.coff  smooth_bunny_progressive_quadric_p14_log.csv  smooth_bunny_progressive_quadric_p14_proxies.json  smooth_bunny_progressive_quadric_p14_proxy_validity_log.csv  smooth_bunny_progressive_quadric_p14_segmentation.coff  smooth_bunny_progressive_quadric_p5_insertion_log.csv  smooth_bunny_progressive_quadric_p5_log.csv  (+29 more)
.claude/: settings.json  settings.local.json
tests/: test_quadric.cpp
